force-app/main/default/objects/Maintenance_Request__c/fields/Appliance_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Appliance_if_applicable__c</fullName>
    <label>Appliance (if applicable)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stove</fullName>
            </value>
            <value>
                <fullName>Dishwasher</fullName>
            </value>
            <value>
                <fullName>HVAC Unit</fullName>
            </value>
            <value>
                <fullName>Hot Water Heater</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>