force-app/main/default/objects/Maintenance_Request__c/fields/Date_Time_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_Service__c</fullName>
    <label>Date/Time of Service</label>
    <type>DateTime</type>
</CustomField>