force-app/main/default/objects/Maintenance_Request__c/fields/Maintenance_Company__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Company used to complete the maintenance request.</inlineHelpText>
    <label>Maintenance Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Maintenance Requests</relationshipLabel>
    <relationshipName>Maintenance_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>