force-app/main/default/objects/Maintenance_Request__c/fields/Other_Specify__c.field-meta.xml
<CustomField>
    <fullName>Other_Specify__c</fullName>
    <inlineHelpText>If &quot;Other&quot; is selected for the Type field, please describe the type of maintenance that is required.</inlineHelpText>
    <label>Other, Specify:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>