force-app/main/default/objects/Maintenance_Request__c/fields/Summary_of_Work_Done__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Work_Done__c</fullName>
    <label>Summary of Work Done</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>