force-app/main/default/objects/Maintenance_Request__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenant</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Tenant does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Tenant</value>
        </filterItems>
        <infoMessage>Please select the tenant related to this maintenance request.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Maintenance Requests</relationshipLabel>
    <relationshipName>Maintenance_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>