force-app/main/default/objects/Maintenance_Request__c/validationRules/Property_Field_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Property_Field_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name != &quot;Tenant Portal User&quot;, ISBLANK(Property__c))</errorConditionFormula>
    <errorDisplayField>Property__c</errorDisplayField>
    <errorMessage>You must associate a property with this maintenance request.</errorMessage>
</ValidationRule>