force-app/main/default/objects/Maintenance_Request__c/validationRules/Tenant_Field_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Tenant_Field_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name != &quot;Tenant Portal User&quot;, ISBLANK(Tenant__c))</errorConditionFormula>
    <errorDisplayField>Tenant__c</errorDisplayField>
    <errorMessage>You must associate a Tenant with this maintenance request.</errorMessage>
</ValidationRule>