force-app/main/default/objects/Maintenance_Request__c/listViews/Closed_Maintenance_Requests.listView-meta.xml
<ListView>
    <fullName>Closed_Maintenance_Requests</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>Closed Maintenance Requests</label>
</ListView>