force-app/main/default/objects/Maintenance_Request__c/listViews/Open_Maintenance_Requests.listView-meta.xml
<ListView>
    <fullName>Open_Maintenance_Requests</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>Tenant__c</columns>
    <columns>Priority__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Working</value>
    </filters>
    <label>Open Maintenance Requests</label>
</ListView>